# StelLang

./: README.md
.github/workflows/: rust.yml
stel_discord/: index.js  index.ts  package.json
stel_discord/commands/: announce.ts  askai.ts  ban.ts  docs.ts  helpme.ts  kick.ts  mute.ts  ping.ts  purge.ts  server.ts  unmute.ts  user.ts  warn.ts  warnings.ts
stellang/: .gitignore  Cargo.toml  README.md  ROADMAP_FULL.md  profiling_output.txt
stellang/pico/: main.rs  pico.toml
stellang/src/: lib.rs  main.rs  main.stel  main.stl
stellang/src/lang/: ast.rs  exceptions.rs  interpreter.rs  lexer.rs  parser.rs
stellang/tests/: advanced_features_tests.rs  builtin_method_tests.rs  exception_tests.rs  main.stl  operator_tests.rs  package_manager_tests.rs  test_builtins.stel
stellang/web/: LICENSE  README.md  docusaurus.config.js  package-lock.json  package.json
stellang/web/app/: layout.tsx
stellang/web/blog/: 2024-04-03-first-blog-post.md  2025-01-19-rewrite-to-rust.md  2025-01-26-introducing-crab.md  authors.yml
stellang/web/blog/2024-04-03-welcome/: index.md
stellang/web/docs/: intro.md
stellang/web/docs/getting-started/: _category_.json  download.md  keywords.md  use-cases.md
stellang/web/src/components/HomepageFeatures/: index.js
stellang/web/src/pages/: community.md  docs.md  index.js
web/: docusaurus.config.js  sidebars.js
web/blog/: 2025-05-01-vision-and-philosophy.md  2025-05-02-rewriting-in-rust.md  2025-05-03-stel-package-manager.md  2025-05-04-getting-started.md  2025-05-05-advanced-features.md  2025-05-06-publish-package.md  2025-05-07-roadmap.md  2025-05-08-community.md  2025-07-01-use-cases.md  2025-07-02-comparison.md  2025-07-03-debugging.md  2025-07-04-best-practices.md  2025-07-05-stdlib-design.md
web/docs/: intro.md  stel-package-manager.md  (+1 more)
(+10 files in other folders)
