[package]
name = "stellang"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4"

[[bin]]
name = "stellang"
path = "src/main.rs"

[[bin]]
name = "pico"
path = "src/bin/pico.rs"

[[test]]
name = "operator_tests"
path = "tests/operator_tests.rs"

[[test]]
name = "builtin_method_tests"
path = "tests/builtin_method_tests.rs"
