[package]
name = "stellang"
version = "0.1.0"
edition = "2021"

[dependencies]
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
semver = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }

[[bin]]
name = "stellang"
path = "src/main.rs"

[[bin]]
name = "stel"
path = "src/bin/stel.rs"

[[test]]
name = "operator_tests"
path = "tests/operator_tests.rs"

[[test]]
name = "builtin_method_tests"
path = "tests/builtin_method_tests.rs"
